--- a/paginas/css/style.css
+++ b/paginas/css/style.css
@@ -1,86 +1,3 @@
-/* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #196ab6;
-}
-
-.card {
-    position: relative;
-    width: 350px;
-    /* height: 400px; 
-    height: 100px;
-    overflow: hidden;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    transition: height 0.5s ease-in-out;
-}
-
-.card.active {
-    height: 400px;
-}
-
-.card .content {
-    display: flex;
-    align-items: center;
-}
-
-.card .content h2 {
-    margin-left: 15px;
-    font-size: 400;
-    color: #567b9e;
-}
-
-.card .content .profile {
-    position: relative;
-    width: 75px;
-    height: 75px;
-    border-radius: 50px;
-    overflow: hidden;
-}
-
-.card .content .profile img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.toggle{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 40px;
-    height: 40px;
-    background: #3d88ce;
-    border-end-end-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.toggle ion-icon {
-    color: white;
-    font-size: 1.4rem;
-    transition: transform ease-in-out 0.5s;
-}
-
-.card.active .toggle ioc-icon {
-    transform: rotate(-180deg);
-}*/
-
 @charset "UTF-8";
 
 * {
@@ -162,6 +79,11 @@ a {
 	color: inherit;
 }
 
+a img{
+    width: 150px;
+    height: 90px;
+}
+
 @media only screen and (max-width: 860px) {
 	#openMenu, #closeMenu {
 		display: block;
@@ -228,28 +150,18 @@ a {
     margin: 50px 0;
 }
 
-.content.active {
-    height: 400px;
-}
-
 .content {
     width: 20%;
-    height: 200px;
     margin: 15px;
     box-sizing: border-box;
     float: left;
     text-align: center;
     border-radius: 20px;
-    cursor: pointer;
     padding-top: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
     0 10px 10px rgba(0,0,0,0.22);
+    transition: .4s;
     background: #f2f2f2;
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    padding: 20px;
-    transition: height 0.5s ease-in-out;
 }
 
 .content p {
@@ -262,49 +174,9 @@ a {
     transform: translate (0px, -8px);
 }
 
-/* .content .profile {
-    position: relative;
-    width: 75px;
-    height: 75px;
-    border-radius: 50px;
-    overflow: hidden;
-}
-
-.content .profile img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-} */
-
-.toggle{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 40px;
-    height: 40px;
-    background: #3d88ce;
-    border-end-end-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.toggle ion-icon {
-    color: white;
-    font-size: 1.4rem;
-    transition: transform ease-in-out 0.5s;
-}
-
-.content.active .toggle ioc-icon {
-    transform: rotate(-180deg);
-}
-
 img {
-    width: 150px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     text-align: center;
     margin: 0 auto;
     display: block;
@@ -378,4 +250,84 @@ button {
     .content {
         width: 100%;
     }
+}
+
+
+.container .card .face{
+    width: 100%;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content2{
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content2{
+    opacity: 1;
+}
+
+.container .card .face.face1 .content2 img{
+    max-width: 100%;
+    height: 20vh;
+}
+
+.container .card .face.face1 .content2 h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
+}
+
+.container .card .face.face2 .content3 p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content3 a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 5px;
+    border: 1px solid #333;
+}
+
+.container .card .face.face2 .content3 a:hover{
+    background: #333;
+    color: #fff;
 }
