--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ nav a {
 	font-size: 15pt;
 }
 
+.btn-login {
+    padding: 7px;
+}
+
 main {
     margin: 0;
     /* background: url(../img/POR_SOL.jpg) no-repeat fixed; */
@@ -222,7 +226,7 @@ li {
     transition: .6s;
 }
 
-button {
+.galeria .content button {
     text-align: center;
     font-size: 24px;
     color: #fff;
