--- a/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/product card popup/css/style.css
+++ b/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/product card popup/css/style.css
@@ -1,14 +1,10 @@
-@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
-
 
 *{
    font-family: 'Nunito', sans-serif;
-   margin:0; 
-   padding:0;
+   margin:0; padding:0;
    box-sizing: border-box;
-   outline: none;
-   border:none;
+   outline: none; border:none;
    text-decoration: none;
    transition: all .2s linear;
    text-transform: capitalize;
@@ -21,152 +17,7 @@ html{
 
 body{
    background: #eee;
-   display: flex;
-	flex-wrap: wrap;
-	flex: 1 1 100vw;
-	margin: 3px;
 }
-
-header, nav, main, aside, footer {
-	display: flex;
-	margin: 3px;
-}
-
-header {
-    margin: 0;
-    color: #000000;
-    background:#979ba0;
-	flex: 1 1 100vw;
-}
-
-header a {
-    padding: 1.5%;
-    font-size: 1.8rem;
-}
-
-header #logo {
-	display: flex;
-	flex: 0 1 25%;
-	justify-content: center;
-	align-items: center;
-}
-
-#openMenu, #closeMenu {
-	border: none;
-	background: none;
-	font-size: 30px;
-	font-weight: bold;
-	padding: 0px 5px 0px 5px;
-	cursor: pointer;
-	display: none;
-    color: #000000;
-}
-
-header nav {
-	justify-content: flex-end;
-	align-items: center;
-	flex: 1 1 200px;
-}
-
-header nav a {
-	margin: 0 3%;
-	font-size: 15pt;
-}
-
-
-header a { 
-	text-decoration: none;
-	color: inherit;
-}
-
-header a img{
-    width: 150px;
-    height: 90px;
-}
-
-header nav .loginBtn {
-   background: #ff0101;
-   border-radius: 16px;
-   border: 2px solid #303030;
-   height: 35%;
-   display: flex;
-   align-items: center;
-}
-
-header nav .loginBtn:hover {
-   background: #a60202;
-   color: #fff;
-   box-shadow: 0 0 40px 10px #ffffff;
-   border: 2px solid #4dff00;
-}
-
-main {
-   margin: 0;
-   /* background: url(../img/POR_SOL.jpg) no-repeat fixed; */
-   background: #2b3540;
-	flex: 20 1 500px;
-}
-
-aside {
-	flex: 1 1 200px;
-}
-
-footer {
-	flex: 1 1 100vw;
-}
-
-@media only screen and (max-width: 860px) {
-	#openMenu, #closeMenu {
-		display: block;
-	}
-
-	#openMenu {
-		margin-left: auto;
-	}
-
-	#closeMenu {
-		position: fixed;
-		/* right: 50%; */
-      bottom: 50%;
-		top: 20%;
-	}
-
-	nav {
-		position: fixed;
-		width: 100vw;
-		height: 100vh;
-		background: rgba(212, 212, 212, 0.811);
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		margin: 0;
-		display: none;
-		opacity: 0;
-		transition: 0.3s;
-      color: #000000;
-	}
-
-	nav a {
-      font-size: 1.8rem;
-		margin: 3%;
-      position: relative;
-      bottom: 20%;
-	}
-
-    nav a:hover {
-      color: #0a69cf;
-    }
-
-    header nav .loginBtn {
-      background: #ff0101;
-      border-radius: 16px;
-      border: 2px solid #303030;
-      height: 8%;
-      display: flex;
-      align-items: center;
-   }
-}
-
 
 .container{
    max-width: 1200px;
@@ -176,7 +27,7 @@ footer {
 
 .container .title{
    font-size: 3.5rem;
-   color:#c3c1c1;
+   color:#444;
    margin-bottom: 3rem;
    text-transform: uppercase;
    text-align: center;
@@ -205,7 +56,6 @@ footer {
 
 .container .products-container .product img{
    height: 25rem;
-   width: 25rem;
 }
 
 .container .products-container .product:hover img{
@@ -254,7 +104,6 @@ footer {
 
 .products-preview .preview img{
    height: 30rem;
-   width: 30rem;
 }
 
 .products-preview .preview .fa-times{
