--- a/paginas/css/login.css
+++ b/paginas/css/login.css
@@ -13,6 +13,10 @@
     filter: blur(10px);
 }
 
+.login-box.sumiu {
+    display: none;
+}
+
 .login-box {
     background: violet;
     position: absolute;
