--- a/teste-mobile/pronto.css
+++ b/teste-mobile/pronto.css
@@ -6,8 +6,18 @@
 nav {
     display: flex;
     justify-content: center;
-    position: relative;
-    top: 100px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.content {
+    height: 100px;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    /* justify-content: flex-start; */
 }
 
 .inlineList {
@@ -21,23 +31,31 @@ nav {
   
 .inlineList li {
     margin: 0 50px;
-    /* background-color: aqua; */
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
     height: 55px;
     width: 55px;
     border-radius: 50%;
 }
 
-.content {
-    height: 100px;
-    background-color: red;
-    display: flex;
-    align-items: center;
+.li1 {
+    background-color: #663399;
 }
 
-.fundo1 {
+/* .li2 {
+    background-color: #8c19ff;
+}
+
+.li3 {
+    background-color: #1ee456;
+}
+
+.li4 {
+    background-color: #b5af15;
+} */
+
+/* .fundo1 {
     background-color: blueviolet;
     opacity: 0.5;
     height: 55px;
@@ -45,10 +63,10 @@ nav {
     border-radius: 50%;
     position: relative;
     bottom: 15px;
-    right:  12.5%;
-}
+    right:  15.5%;
+} */
 
-.fundo2 {
+/* .fundo2 {
     background-color: blueviolet;
     opacity: 0.5;
     height: 55px;
@@ -56,7 +74,7 @@ nav {
     border-radius: 50%;
     position: relative;
     bottom: 15px;
-    right:  12.5%;
+    right:  15.5%;
 }
 
 .fundo3 {
@@ -67,7 +85,7 @@ nav {
     border-radius: 50%;
     position: relative;
     bottom: 15px;
-    right:  12.5%;
+    right:  15.5%;
 }
  
 .fundo4 {
@@ -78,5 +96,5 @@ nav {
     border-radius: 50%;
     position: relative;
     bottom: 15px;
-    right:  12.5%;
-}
+    right:  15.5%;
+} */
