--- a/css/PAGINAS/sobre.css
+++ b/css/PAGINAS/sobre.css
@@ -8,20 +8,20 @@
     width: 125px;
     border-radius: 10px;
  }
-.container .title{
+.container .title {
     font-size: 3.5rem;
     color:#c3c1c1;
     margin-bottom: 3rem;
     text-transform: uppercase;
     text-align: center;
  }
- .container .image-cir{
+ .container .image-cir {
     margin: 5% 0;
  }
  .container .imagem-circulo {
     position: relative;
-    width: 250px;
-    height: 250px;
+    width: 320px;
+    height: 320px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -58,15 +58,52 @@
     }
 }
 
+.containerRow {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 400px;
+  background: white;
+  gap: 300px;
+}
+
+.row {
+  background: red;
+  margin: 0 8px;
+}
+
+.txtContainerRow {
+  background: red;
+  padding: 15px;
+  text-align: center;
+  border: 5px solid black;
+  width: 400px;
+}
+
+.txtContainerRow h2 {
+  font-size: 2.5rem;
+}
+
+.txtContainerRow h3 {
+  /* letter-spacing:; Faz o espaçamento de cada letra */
+  word-spacing: 8px;
+  line-height: 2.7rem;
+}
+
+#aside {
+  background: red;
+}
+
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
 * {
   box-sizing: border-box;
 }
 
-#contProfile {
+#main {
   color: #2b2c48;
   font-family: "Jost", sans-serif;
   background-image: url(https://images.unsplash.com/photo-1566738780863-f9608f88f3a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2378&q=80);
+  /* background-image: url("/img/bg.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -75,6 +112,22 @@
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
+}
+
+#contProfile {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 10%;
+}
+
+.txtProfile {
+  position: relative;
+  top: 30%;
+  left: 40%;
+  background: white;
+  height: 300px;
+  width: 500px;
 }
 
 .cardProfile {
@@ -418,4 +471,9 @@
   font-weight: 500;
   font-family: "Jost", sans-serif;
   transition: 0.3s;
+}
+
+.h2txtProfile {
+  display: flex;
+  justify-content: center; 
 }
