--- a/CSS/PAGINAS/sobre.css
+++ b/CSS/PAGINAS/sobre.css
@@ -1,67 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
 
-#main .container .texto-main{
-    color: white;
-    text-align: center;
-    font-size: 15px;
-}
-#main .container .texto-main img {
-    height: 200px;
-    width: 125px;
-    border-radius: 10px;
- }
-.container .title {
-    font-size: 3.5rem;
-    color:#c3c1c1;
-    margin-bottom: 3rem;
-    text-transform: uppercase;
-    text-align: center;
- }
- .container .image-cir {
-    margin: 5% 0;
- }
- .container .imagem-circulo {
-    position: relative;
-    width: 320px;
-    height: 320px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center ;
-}
-.container .imagem-circulo img {
-    width:  90%;
-    height: 90%;
-    border-radius: 50%;
-    border: .2rem solid red;
-}
-.container .spiner-cicle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) rotate(0);
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border-top: .2rem solid #2b3540;
-    border-bottom: .2rem solid #2b3540;
-    border-left: .2rem solid white;
-    border-right: .2rem solid white ; 
-    animation: circuloRodar 8s linear infinite;
-}
-
-@keyframes circuloRodar {
-    100% {
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
-
-@media (max-width: 767px) {
-    #main .container .row .col-sm .image-cir .imagem-circulo {
-        margin: 0 auto;
-    }
-}
-
 .containerRow {
   display: flex;
   align-items: center;
@@ -123,7 +61,7 @@
   align-items: center;
   margin: 0 auto;
   gap: 100px;
-  background: white;
+  background: #6e6161;
   width: 90%;
   height: 100%;
 }
@@ -482,9 +420,11 @@
   position: relative;
   right: 3%;
 }
-.txtProfile h2:hover{
-  /* border-bottom: 5px solid red; */
+
+.txtProfile hr {
+  border: 2px solid black;
 }
+
 .h2txtProfile {
   display: flex;
   justify-content: center; 
