--- a/CSS/PAGINAS/sobre.css
+++ b/CSS/PAGINAS/sobre.css
@@ -1,72 +1,57 @@
-@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
-
-.containerRow {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 400px;
-  background: white;
-  gap: 300px;
-}
-
-.row {
-  background: red;
-  margin: 0 8px;
-}
-
-.txtContainerRow {
-  background: red;
-  padding: 15px;
-  text-align: center;
-  border: 5px solid black;
-  width: 400px;
-}
-
-.txtContainerRow h2 {
-  font-size: 2.5rem;
-}
-
-.txtContainerRow h3 {
-  /* letter-spacing:; Faz o espaçamento de cada letra */
-  word-spacing: 8px;  /*Faz o espaçamento entre as palavras*/
-  line-height: 2.7rem;
-}
-
-#aside {
-  background: red;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;1,400&display=swap');
 
 * {
-  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto Mono', monospace;
 }
 
-#main {
-  color: #2b2c48;
-  font-family: "Jost", sans-serif;
+main {
   background-image: url(https://images.unsplash.com/photo-1566738780863-f9608f88f3a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2378&q=80);
   /* background-image: url("/img/bg.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px;
 }
 
-#contProfile {
+.row{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* Add your background pattern here */
+  background-color: #313131;
+  background-image: radial-gradient(rgb(135, 135, 135) 2px, transparent 0);
+  background-size: 30px 30px;
+  background-position: -5px -5px;
+}
+
+
+#containerProfile,
+#containerCard {
+    width: 100%;
+    height: 100%;
+    /* Add your background pattern here */
+    background-color: #313131;
+    background-image: radial-gradient(rgb(135, 135, 135) 2px, transparent 0);
+    background-size: 30px 30px;
+    background-position: -5px -5px;
+}
+
+#containerProfile #contProfile {
+  min-height: 100vh;
+  display: flex;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  gap: 100px;
-  background: #6e6161;
-  width: 90%;
+  color: #2b2c48;
+  width: 100%;
   height: 100%;
+  /* padding: 20px; */
 }
 
-.cardProfile {
+#containerProfile #contProfile .cardProfile {
   max-width: 340px;
   margin: auto;
   overflow-y: auto;
@@ -81,51 +66,51 @@
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
-.cardProfile[data-state="#about"] {
+#containerProfile #contProfile .cardProfile[data-state="#about"] {
   height: 450px;
 }
-.cardProfile[data-state="#about"] .card-main {
+#containerProfile #contProfile .cardProfile[data-state="#about"] .card-main {
   padding-top: 0;
 }
 
-.cardProfile[data-state="#contact"] {
+#containerProfile #contProfile .cardProfile[data-state="#contact"] {
   height: 430px;
 }
 
-.cardProfile[data-state="#experience"] {
+#containerProfile #contProfile .cardProfile[data-state="#experience"] {
   height: 550px;
 }
 
-.cardProfile.is-active .card-header {
+#containerProfile #contProfile .cardProfile.is-active .card-header {
   height: 80px;
 }
-.cardProfile.is-active .card-cover {
+#containerProfile #contProfile .cardProfile.is-active .card-cover {
   height: 100px;
   top: -50px;
 }
-.cardProfile.is-active .card-avatar {
+#containerProfile #contProfile .cardProfile.is-active .card-avatar {
   transform: none;
   left: 20px;
   width: 50px;
   height: 50px;
   bottom: 10px;
 }
-.cardProfile.is-active .card-fullname,
-.cardProfile.is-active .card-jobtitle {
+#containerProfile #contProfile .cardProfile.is-active .card-fullname,
+#containerProfile #contProfile .cardProfile.is-active .card-jobtitle {
   left: 86px;
   transform: none;
 }
-.cardProfile.is-active .card-fullname {
+#containerProfile #contProfile .cardProfile.is-active .card-fullname {
   bottom: 18px;
   font-size: 19px;
 }
-.cardProfile.is-active .card-jobtitle {
+#containerProfile #contProfile .cardProfile.is-active .card-jobtitle {
   bottom: 16px;
   letter-spacing: 1px;
   font-size: 10px;
 }
 
-.card-header {
+#containerProfile #contProfile .card-header {
   position: relative;
   display: flex;
   height: 200px;
@@ -133,11 +118,11 @@
   width: 100%;
   transition: 0.3s;
 }
-.card-header * {
+#containerProfile #contProfile .card-header * {
   transition: 0.3s;
 }
 
-.card-cover {
+#containerProfile #contProfile .card-cover {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -152,7 +137,7 @@
   transition: 0.5s;
 }
 
-.card-avatar {
+#containerProfile #contProfile .card-avatar {
   width: 100px;
   height: 100px;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
@@ -166,12 +151,12 @@
   left: 50%;
   transform: translateX(-50%) translateY(-64px);
 }
-.card-avatar:hover{
+#containerProfile #contProfile .card-avatar:hover{
   width: 150px;
 }
-.card-fullname {
+#containerProfile #contProfile .card-fullname {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   font-size: 22px;
   font-weight: 700;
   text-align: center;
@@ -180,7 +165,7 @@
   left: 50%;
 }
 
-.card-jobtitle {
+#containerProfile #contProfile .card-jobtitle {
   position: absolute;
   bottom: 0;
   /* bottom: -5px; */
@@ -195,7 +180,7 @@
   transform: translateX(-50%) translateY(-7px);
 }
 
-.card-main {
+#containerProfile #contProfile .card-main {
   position: relative;
   flex: 1;
   display: flex;
@@ -203,17 +188,17 @@
   flex-direction: column;
 }
 
-.card-subtitle {
+#containerProfile #contProfile .card-subtitle {
   font-weight: 700;
   font-size: 13px;
   margin-bottom: 8px;
 }
 
-.card-content {
+#containerProfile #contProfile .card-content {
   padding: 20px;
 }
 
-.card-desc {
+#containerProfile #contProfile .card-desc {
   line-height: 1.6;
   color: #636b6f;
   font-size: 14px;
@@ -222,19 +207,19 @@
   font-family: "DM Sans", sans-serif;
 }
 
-.card-social {
+#containerProfile #contProfile .card-social {
   display: flex;
   align-items: center;
   padding: 0 20px;
   margin-bottom: 30px;
 }
-.card-social svg {
+#containerProfile #contProfile .card-social svg {
   fill: #a5b5ce;
   width: 16px;
   display: block;
   transition: 0.3s;
 }
-.card-social a {
+#containerProfile #contProfile .card-social a {
   color: #8797a1;
   height: 32px;
   width: 32px;
@@ -247,14 +232,14 @@
   border-radius: 50%;
   margin-right: 10px;
 }
-.card-social a:hover svg {
+#containerProfile #contProfile .card-social a:hover svg {
   fill: #637faa;
 }
-.card-social a:last-child {
+#containerProfile #contProfile .card-social a:last-child {
   margin-right: 0;
 }
 
-.card-buttons {
+#containerProfile #contProfile .card-buttons {
   display: flex;
   background-color: #fff;
   margin-top: auto;
@@ -262,7 +247,7 @@
   bottom: 0;
   left: 0;
 }
-.card-buttons button {
+#containerProfile #contProfile .card-buttons button {
   flex: 1 1 auto;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -280,16 +265,16 @@
   outline: 0;
   border-bottom: 3px solid transparent;
 }
-.card-buttons button.is-active, .card-buttons button:hover {
+#containerProfile #contProfile .card-buttons button.is-active, .card-buttons button:hover {
   color: #2b2c48;
   border-bottom: 3px solid #8a84ff;
   background: linear-gradient(to bottom, rgba(127, 199, 231, 0) 0%, rgba(207, 204, 255, 0.2) 44%, rgba(211, 226, 255, 0.4) 100%);
 }
 
-.card-section {
+#containerProfile #contProfile .card-section {
   display: none;
 }
-.card-section.is-active {
+#containerProfile #contProfile .card-section.is-active {
   display: block;
   -webkit-animation: fadeIn 0.6s both;
           animation: fadeIn 0.6s both;
@@ -314,11 +299,11 @@
     opacity: 1;
   }
 }
-.card-timeline {
+#containerProfile #contProfile .card-timeline {
   margin-top: 30px;
   position: relative;
 }
-.card-timeline:after {
+#containerProfile #contProfile .card-timeline:after {
   background: linear-gradient(to top, rgba(134, 214, 243, 0) 0%, #516acc 100%);
   content: "";
   left: 42px;
@@ -329,17 +314,17 @@
   content: "";
 }
 
-.card-item {
+#containerProfile #contProfile .card-item {
   position: relative;
   padding-left: 60px;
   padding-right: 20px;
   padding-bottom: 30px;
   z-index: 1;
 }
-.card-item:last-child {
+#containerProfile #contProfile .card-item:last-child {
   padding-bottom: 5px;
 }
-.card-item:after {
+#containerProfile #contProfile .card-item:after {
   content: attr(data-year);
   width: 10px;
   position: absolute;
@@ -356,24 +341,24 @@
   background: linear-gradient(to bottom, #a0aee3 0%, #516acc 100%);
 }
 
-.card-item-title {
+#containerProfile #contProfile .card-item-title {
   font-weight: 500;
   font-size: 14px;
   margin-bottom: 5px;
 }
 
-.card-item-desc {
+#containerProfile #contProfile .card-item-desc {
   font-size: 13px;
   color: #6f6f7b;
   line-height: 1.5;
   font-family: "DM Sans", sans-serif;
 }
 
-.card-contact-wrapper {
+#containerProfile #contProfile .card-contact-wrapper {
   margin-top: 20px;
 }
 
-.card-contact {
+#containerProfile #contProfile .card-contact {
   display: flex;
   align-items: center;
   font-size: 13px;
@@ -382,10 +367,10 @@
   line-height: 1.6;
   cursor: pointer;
 }
-.card-contact + .card-contact {
+#containerProfile #contProfile .card-contact + .card-contact {
   margin-top: 16px;
 }
-.card-contact svg {
+#containerProfile #contProfile .card-contact svg {
   flex-shrink: 0;
   width: 30px;
   min-height: 34px;
@@ -395,7 +380,7 @@
   border-right: 1px solid #dfe2ec;
 }
 
-.contact-me {
+#containerProfile #contProfile .contact-me {
   border: 0;
   outline: none;
   background: linear-gradient(to right, rgba(83, 200, 239, 0.8) 0%, rgba(81, 106, 204, 0.8) 96%);
@@ -412,31 +397,202 @@
   transition: 0.3s;
 }
 
-.txtProfile {
-  background: gray;
-  height: 300px;
-  width: 500px;
-  text-align: center;
-  position: relative;
-  right: 3%;
-}
-
-.txtProfile hr {
-  border: 2px solid black;
-}
-
-.h2txtProfile {
+/*CARD 2*/
+#containerCard {
   display: flex;
-  justify-content: center; 
-  padding: 10px;
-  font-size: 3rem;
+  align-items: center;
+  /* justify-content: center; */
 }
-/* .h2txtProfile:hover{
-  border-bottom: 5px solid red;
-} */
-.txtProfile p {
-  font-size: 1.5rem;
-  margin: 0 20px;
-  /* background: red; */
-  text-align: center;
+
+.card {
+  width: 290px;
+  height: 354px;
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  border-radius: 20px;
+  transition: all .3s;
+  overflow: visible;
+}
+ 
+ .card2 {
+  width: 290px;
+  height: 354px;
+  background-color: #1a1a1a;
+  border-radius: 20px;
+  transition: all .2s;
+  overflow: visible;
+ }
+ 
+ .card2:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+ }
+ 
+ .card:hover {
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+ }
+
+.contentMenu {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 300ms;
+  box-shadow: 0px 0px 10px 1px #000000ee;
+  border-radius: 5px;
+}
+
+.front, .back {
+  background-color: #151515;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.back {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.back::before {
+  position: absolute;
+  content: ' ';
+  display: block;
+  width: 160px;
+  height: 160%;
+  background: linear-gradient(90deg, transparent, #ff9966, #ff9966, #ff9966, #ff9966, transparent);
+  animation: rotation_481 5000ms infinite linear;
+}
+
+.back-content {
+  position: absolute;
+  width: 99%;
+  height: 99%;
+  background-color: #151515;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.card:hover .contentMenu {
+  transform: rotateY(180deg);
+}
+
+@keyframes rotation_481 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+
+  0% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.front {
+  transform: rotateY(180deg);
+  color: white;
+}
+
+.front .front-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.front-content .badge {
+  background-color: #00000055;
+  padding: 2px 10px;
+  border-radius: 10px;
+  backdrop-filter: blur(2px);
+  width: fit-content;
+}
+
+.description {
+  box-shadow: 0px 0px 10px 5px #00000088;
+  width: 100%;
+  padding: 10px;
+  background-color: #00000099;
+  backdrop-filter: blur(5px);
+  border-radius: 5px;
+}
+
+.title {
+  font-size: 11px;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.title p {
+  width: 50%;
+}
+
+.card-footer {
+  color: #ffffff88;
+  margin-top: 5px;
+  font-size: 8px;
+}
+
+.front .img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.circle {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background-color: #ffbb66;
+  position: relative;
+  filter: blur(15px);
+  animation: floating 2600ms infinite linear;
+}
+
+#bottom {
+  background-color: #ff8866;
+  left: 50px;
+  top: 0px;
+  width: 150px;
+  height: 150px;
+  animation-delay: -800ms;
+}
+
+#right {
+  background-color: #ff2233;
+  left: 160px;
+  top: -80px;
+  width: 30px;
+  height: 30px;
+  animation-delay: -1800ms;
+}
+
+@keyframes floating {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
