--- a/CSS/PAGINAS/index.css
+++ b/CSS/PAGINAS/index.css
@@ -59,6 +59,25 @@
     color:#444;
  }
  
+ @media (max-width:990px){
+   html{
+      font-size: 55%;
+   }
+}
+
+@media (max-width:768px){
+   .products-preview .preview img{
+      height: 25rem;
+   }
+}
+
+@media (max-width:450px){
+
+   html{
+      font-size: 50%;
+   }
+}
+
 
 /*MEIO QUE O "HOVER ONDE VAI EM ADD LISTA E TALS"*/
  .products-preview{
@@ -192,22 +211,208 @@
  .products-preview .preview .buttons .btnFechar:hover{
     background: #8f0505;
  }
+
+
+
+/*CARD 2-CONTAINER_CARD*/
+.col{
+   margin: 20px 0;
+ }
+
+.containerCard {
+   display: flex;
+   align-items: center;
+   /* justify-content: center; */
+ }
  
-@media (max-width:991px){
-    html{
-       font-size: 55%;
-    }
-}
+ .card {
+   width: 290px;
+   height: 354px;
+   background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+   border-radius: 20px;
+   transition: all .3s;
+   overflow: visible;
+ }
+  
+  .card2 {
+   width: 290px;
+   height: 354px;
+   background-color: #1a1a1a;
+   border-radius: 20px;
+   transition: all .2s;
+   overflow: visible;
+  }
+  
+  .card2:hover {
+   transform: scale(0.98);
+   border-radius: 20px;
+  }
+  
+  .card:hover {
+   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+  }
  
-@media (max-width:768px){
-    .products-preview .preview img{
-       height: 25rem;
-    }
-}
+ .contentMenu {
+   width: 100%;
+   height: 100%;
+   transform-style: preserve-3d;
+   transition: transform 300ms;
+   box-shadow: 0px 0px 10px 1px #000000ee;
+   border-radius: 5px;
+ }
  
-@media (max-width:450px){
+ .front, .back {
+   background-color: #151515;
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   backface-visibility: hidden;
+   -webkit-backface-visibility: hidden;
+   border-radius: 5px;
+   overflow: hidden;
+ }
  
-    html{
-       font-size: 50%;
-    }
-}
+ .back {
+   width: 100%;
+   height: 100%;
+   justify-content: center;
+   display: flex;
+   align-items: center;
+   overflow: hidden;
+ }
+ 
+ .back::before {
+   position: absolute;
+   content: ' ';
+   display: block;
+   width: 160px;
+   height: 160%;
+   background: linear-gradient(90deg, transparent, #ff9966, #ff9966, #ff9966, #ff9966, transparent);
+   animation: rotation_481 5000ms infinite linear;
+ }
+ 
+ .back-content {
+   position: absolute;
+   width: 99%;
+   height: 99%;
+   background-color: #151515;
+   border-radius: 5px;
+   color: white;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 30px;
+ }
+ 
+ .card:hover .contentMenu {
+   transform: rotateY(180deg);
+ }
+ 
+ @keyframes rotation_481 {
+   0% {
+     transform: rotateZ(0deg);
+   }
+ 
+   0% {
+     transform: rotateZ(360deg);
+   }
+ }
+ 
+ .front {
+   transform: rotateY(180deg);
+   color: white;
+ }
+ 
+ .front .front-content {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   padding: 10px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+ }
+ 
+ .front-content .badge {
+   background-color: #00000055;
+   padding: 2px 10px;
+   border-radius: 10px;
+   backdrop-filter: blur(2px);
+   width: fit-content;
+ }
+ 
+ .description {
+   box-shadow: 0px 0px 10px 5px #00000088;
+   width: 100%;
+   padding: 10px;
+   background-color: #00000099;
+   backdrop-filter: blur(5px);
+   border-radius: 5px;
+ }
+ 
+ .title {
+   font-size: 11px;
+   max-width: 100%;
+   display: flex;
+   justify-content: space-between;
+ }
+ 
+ .title p {
+   width: 50%;
+ }
+ 
+ .card-footer {
+   color: #ffffff88;
+   margin-top: 5px;
+   font-size: 8px;
+ }
+ 
+ .front .img {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   object-position: center;
+ }
+ .circle {
+   width: 90px;
+   height: 90px;
+   border-radius: 50%;
+   background-color: #ffbb66;
+   position: relative;
+   filter: blur(15px);
+   animation: floating 2600ms infinite linear;
+ }
+ 
+ #bottom {
+   background-color: #ff8866;
+   left: 50px;
+   top: 0px;
+   width: 150px;
+   height: 150px;
+   animation-delay: -800ms;
+ }
+ 
+ #right {
+   background-color: #ff2233;
+   left: 160px;
+   top: -80px;
+   width: 30px;
+   height: 30px;
+   animation-delay: -1800ms;
+ }
+ 
+ @keyframes floating {
+   0% {
+     transform: translateY(0px);
+   }
+ 
+   50% {
+     transform: translateY(10px);
+   }
+ 
+   100% {
+     transform: translateY(0px);
+   }
+ }
